mismatched servelet tag with the profile servlet

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -74,6 +74,7 @@
   <servlet-mapping>
     <servlet-name>ProfileServlet</servlet-name>
     <url-pattern>/profile</url-pattern>
+  <servlet-mapping>
   
   <servlet>
     <servlet-name>ActivityFeedServlet</servlet-name>
